syntax = "proto2";

package store;

message CommentStory {
	repeated CommentData commentdata = 1; /*基本的所以记忆体*/
}

message CommentData {
	optional string userName  = 1;    /*谁评论的*/
	optional string answer = 2;    /*作者的回复*/
	optional string time = 3;    /*评论时间*/
	optional string content =4; /*评论内容*/
	optional int32 	id = 5;/*该评论的序号*/
	optional bool isDel = 6; /*是否被删除。*/
	optional fixed32 praise = 7; //点赞次数。固定4字节
}

message UserTopics {
	repeated UserTopicData usertopicdata = 1; /*基本的所以记忆体*/
}

message UserTopicData {
	optional int32 sid = 1; //主题id
	optional int32 aid = 2; //帖子的id
	optional string time = 3;    /*评论时间*/
	optional string title = 4; //帖子的题目
}

message UserComments {
	repeated UserCommentData usercommentdata = 1; /*基本的所以记忆体*/
}

message UserCommentData {
	optional int32 subId = 1; //主题id
	optional int32 aid = 2; //文章id
	optional CommentData commentdata = 3;	
}